TL-31217 core_course: fixed horizontal scroll issue on course activity completion reoprt

--- a/server/theme/legacy/scss/report/progress/progress.scss
+++ b/server/theme/legacy/scss/report/progress/progress.scss
@@ -55,6 +55,7 @@
 #page-report-progress-index .rotated-text-container {
   display: inline-block;
   width: 16px;
+  overflow: hidden;
 }
 
 #page-report-progress-index .rotated-text {
